--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,9 @@
 version: "3"
 services: 
   dbservice:
-    image: mysql
+    image: mysql:8
     environment: 
-      - MYSQL_USERNAME=root
+      # - MYSQL_USERNAME=root
       - MYSQL_ROOT_PASSWORD=test
     volumes:
       - ./data:/var/lib/mysql
@@ -17,7 +17,7 @@ services:
     depends_on: 
       - dbservice
     environment:
-      - spring.datasource.url=jdbc:mysql://dbservice:3306/employee_service?createDatabaseIfNotExist=true
+      - spring.datasource.url=jdbc:mysql://dbservice:3306/user_service?createDatabaseIfNotExist=true
       - spring.datasource.username=root
       - spring.datasource.password=test
     ports:
