--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,7 +13,7 @@ services:
       - bootcomposeapp
 
   springjenkinsmockservice:
-    build: .
+    build: ./
     depends_on: 
       - dbservice
     environment:
