--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: "3"
 services: 
   dbservice:
-    image: mysql:8
+    image: mysql
     environment: 
       # - MYSQL_USERNAME=root
       - MYSQL_ROOT_PASSWORD=test
