--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,9 +3,9 @@ server:
   
 spring:
   datasource:
-    url: jdbc:mysql://dbservice:3306/user_service
+    url: jdbc:mysql://localhost:3306/mokito
     username: root
-    password: test
+    password: intelliatech
     driver-class-name: com.mysql.cj.jdbc.Driver
   jpa:
     show-sql: true
